--- a/bucket-builder/src/defaults.css
+++ b/bucket-builder/src/defaults.css
@@ -2,6 +2,10 @@ html {
     font-family: 'Nunito', sans-serif;
 }
 
+.code {
+    font-family: 'Cascadia Code', monospace;
+}
+
 h1 {
     display: block;
     font-size: 2em;
